// Vitest Snapshot v1

exports[`useSelectable > addItem adds item to the list of items 1`] = `
[
  {
    "id": "1",
  },
  {
    "id": "2",
  },
  {
    "id": "3",
  },
]
`;

exports[`useSelectable > removeItem removes item from the list of items 1`] = `
[
  {
    "id": "1",
  },
  {
    "id": "2",
  },
  {
    "id": "3",
  },
]
`;

exports[`useSelectable > removeItem removes item from the list of items 2`] = `
[
  {
    "id": "1",
  },
  {
    "id": "3",
  },
]
`;

exports[`useSelectable > removeItem removes item from the list of items 3`] = `
[
  {
    "id": "1",
  },
]
`;

exports[`useSelectable > removeItem removes item from the list of items 4`] = `[]`;
